<resources>
    <string name="app_name">Marathon</string>

    <string name="userName">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(cm)</string>
    <string name="address">Address</string>
    <string name="register_btn">Let\'s Start</string>
    <string name="marathon_events">Marathon Events</string>

    <string name="eventName">event name</string>
    <string name="eventStartDate">Start Date</string>
    <string name="eventDescription">description</string>
    <string name="eventAmount">amount</string>
    <string name="eventStartPoint">Location</string>
    <string name="eventEndPoint">Destination</string>
    <string name="eventImage">image</string>
    <string name="finish">Finish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date">Start Date</string>
    <string name="participants">Participants</string>
    <string name="location">Location</string>
    <string name="destination">Destination</string>
    <string name="accept">Accept</string>
    <string name="current_step_title">Steps</string>
    <string name="current_step_value">0</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="error_connection">Error loading requests Please check your internet connection</string>
    <string name="join_event">JOIN EVENT</string>
    <string name="end_event">End Event</string>
    <string name="your_stats">Your Stats</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="back_to_home">BACK TO HOME</string>
</resources>
