<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="request"
            type="fi.metropolia.marathon.model.Request" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".view.DetailFragment">


            <ImageView
                android:id="@+id/requestImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:imageUrl="@{request.image_url}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/acceptButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_btn"
            android:text="@string/accept"
            android:textColor="#fff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/eventName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requestImage" />
            <TextView
                android:id="@+id/StartDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/start_date"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameText"/>

            <TextView
                android:id="@+id/AmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/participants"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText"/>
            <TextView
                android:id="@+id/StartPointTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AmountTextView"/>
            <TextView
                android:id="@+id/EndPointTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/destination"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StartPointTextView"/>

            <TextView
                android:id="@+id/startDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:text="@string/eventStartDate"
                app:layout_constraintStart_toEndOf="@+id/StartDateTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/eventDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startDateText" />

            <TextView
                android:id="@+id/amountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textSize="14sp"
                android:text="@string/eventAmount"
                app:layout_constraintStart_toEndOf="@id/AmountTextView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

            <TextView
                android:id="@+id/startPointText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textSize="14sp"
                android:text="@string/eventStartPoint"
                app:layout_constraintStart_toEndOf="@id/StartPointTextView"
                app:layout_constraintTop_toBottomOf="@+id/amountText" />

            <TextView
                android:id="@+id/endPointText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textSize="14sp"
                android:text="@string/eventEndPoint"
                app:layout_constraintStart_toEndOf="@id/EndPointTextView"
                app:layout_constraintTop_toBottomOf="@+id/startPointText" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>